# server.js
@@ -18,7 +18,8 @@ const port = process.env.PORT || 8080;
 
 // Use 'body-parser' middleware to parse URL-encoded request bodies with extended options.
 // Additionally, use the 'body-parser' module to handle JSON request bodies.
-app.use(BodyParser.urlencoded({ extended: true }), BodyParser.json())
+app.use(BodyParser.urlencoded({ extended: true }));
+app.use(BodyParser.json()) 
 .use(session({
   secret: "secret",
   resave: false,
@@ -28,14 +29,15 @@ app.use(BodyParser.urlencoded({ extended: true }), BodyParser.json())
 .use(passport.initialize())
 .use(passport.session())
 .use((req, res, next) => {
-  res.setHeader("Access-Control-Allow-Origin", "https://basketball4676.onrender.com");
+  res.setHeader("Access-Control-Allow-Origin", "*");
   res.setHeader("Access-Control-Allow-Methods", "GET, POST, PUT, DELETE, OPTIONS");
   res.setHeader("Access-Control-Allow-Headers", "Origin, X-Requested-With, Content-Type, Accept, Z-Key, Authorization");
-  res.setHeader("Access-Control-Allow-Credentials", "true");
+  // res.setHeader("Access-Control-Allow-Credentials", "true");
+  
   next();
 })
-// .use(cors({methods:["GET", "POST", "PUT", "DELETE", "UPDATE", "PATCH"]}))
-// .use(cors({origin: "*"}))
+.use(cors({methods:["GET", "POST", "PUT", "DELETE", "UPDATE", "PATCH"]}))
+.use(cors({origin: "*"}))
 // USe the routes defined in "./routes for the root path
 .use("/", require("./routes/index.js"));
 
@@ -52,20 +54,22 @@ function(accessToken, refreshToken, profile, done){
 ));
 
 passport.serializeUser((user, done)=>{
-  done(null,user)
+  done(null, user)
 });
 passport.deserializeUser((user, done)=>{
-  done(null,user)
+  done(null, user)
 });
 
 
-app.get("/", (req, res)=>{ res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.displayName}` : "Successfully logged out")});
-app.get("/github/callback", passport.authenticate("github", {
-  failureRedirect: "/api-docs", session: false}),
-  (req, res) => {
-    req.session.user = req.user;
-    res.redirect("/");
-  });
+
+app.get('/', (req, res) => {res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.displayName}` : "Logged out")});
+app.get('/github/callback', 
+    passport.authenticate("github", { failureRedirect: "/api-docs", session: false }),
+    (req, res) => {
+        req.session.user = req.user;
+        res.redirect('/');
+    }
+);
 
 // Connect to the MongoDB database using Mongoose
 connectToDatabase();
